HNGi Task 2 - Question 2

--- a/namePrint/index.html
+++ b/namePrint/index.html
@@ -31,7 +31,7 @@
 
       <p>This value is also available on the Console.</p>
 
-      <script src="/namePrint/script.js"></script>
+      <script type="text/javascript" src="script.js"></script>
     </div>
   </body>
 </html>
